fixed layout issue and controls always searching

--- a/assets/css/simsage-search.css
+++ b/assets/css/simsage-search.css
@@ -452,7 +452,7 @@
 .search-results .search-results-two-columns {
     width: 100% !important;
     min-width: 100% !important;
-    display: inline-block;
+    display: inline;
 }
 
 /* two columns */
